# Chip-Defect-Detection-System-Design-on-edge-device

./: README.md
_project_ai_chip/: CMakeLists.txt  README.md  flash_prog_cfg.ini  main.c
_project_ai_chip/NONE/: onenet_post.c  wifi_mqtt_sub.c
_project_ai_chip/NONE/detect/: biankuang241.c  dyw57.c  huashang338.c
_project_ai_chip/NONE/pic/: dyw57.c  huashang338.c
_project_ai_chip/NONE/wifi_mqtt_pub/: send_pic.c  wifi_mqtt_pub.c
_project_ai_chip/src/ai_chip_lcd/: ai_chip_lcd.c
_project_ai_chip/src/ai_chip_lcd/detect/: biankuang241.c  dyw57.c
_project_ai_chip/src/wifi_init/: wifi_init.c
_project_ai_chip/src/wifi_mqtt/: send_pic.c  wifi_mqtt.c
lvgl_wifi/: CMakeLists.txt  README.md  flash_prog_cfg.ini  main.c  proj.conf
lvgl_wifi/inc/: lv_conf.h
lvgl_wifi/src/ai/: ai_face.c
lvgl_wifi/src/cam/: cam_ai.c
lvgl_wifi/src/fatfs/: fatfs_conf_user.c
lvgl_wifi/src/ui/: lv_demos.h  my_ui.c
lvgl_wifi/src/ui/my_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lvgl_wifi/src/ui/my_ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_textarea1.c  ui_comp_textarea1.h
lvgl_wifi/src/ui/my_ui/images/: ui_img_263744089.c  ui_img_410347302.c  ui_img_906722072.c  ui_img_biankuang241_png.c  ui_img_dyw5_png.c  ui_img_huashang338_png.c  ui_img_image_png.c  ui_img_new1_png.c  ui_img_return_png.c  ui_img_wifi_png.c
lvgl_wifi/src/ui/my_ui/screens/: ui_ScreenBiankuang.c  ui_ScreenCam.c  ui_ScreenConnected.c  ui_ScreenDuoyuwu.c  ui_ScreenHuashang.c  (+4 more)
lvgl_wifi/src/wifi_mqtt_pub/: wifi_mqtt_pub.c
lvgl_wifi/src/wifi_mqtt_sub/: wifi_mqtt_sub.c
(+9 files in other folders)
